cambios cart, bag sábado Héctor

--- a/src/app/layout/component/bag-summary/bag-summary.component.html
+++ b/src/app/layout/component/bag-summary/bag-summary.component.html
@@ -1,172 +1,61 @@
 <div>
-	
-	<div class="summary-bag-box mt-3 pl-4 pr-4">
-        <div class="py-3 px-3 summary-bag-box-title">
-            <span class="font-bold text-base">Bolsa de compras: </span>
-            <span class="text-base">Tienes 3 productos</span>
-            
-        </div>
-        <div class="summary-bag-item-wrap pb-2">
-            <div class="summary-bag-item">
-                <p-card class="mb-2 sumary_card">
-                    <div class="flex col-12 pt-0 pb-0">
-                        <div class="">
-                            <div class="pl-2 pr-2 pt-0 pb-0">
-                                <img class="h-3rem w-3rem" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
-                            </div>
-                        </div>
-                        <div class="flex-grow-1">
-                            <div class="card-info-section">
-                                <div>
-                                    <span class="text-sm">Nombre /</span>
-                                    <span class="text-sm">descripción del producto</span>
-                                </div>
-                                <div class="mt-1">
-                                    <div class="text-left text-xs gray">Marca</div>
-                                </div>
-                            </div>
-                            <div class="card-add-item col-12 p-0">
-                                <div class="flex flex-row align-items-center">
-                                    <button pButton pRipple type="button" icon="pi pi-minus" class="p-button-rounded p-button-help p-button-text p-button-sm mr-2"></button>
-                                    <p class="w-3 p-input text-xs text-center btn_sum p-0" type="text" pInputText >
-                                        2 unid
-                                    </p>
-
-                                    <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded p-button-help p-button-text p-button-sm ml-2"></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="price-st flex flex-column justify-content-between">
-                            <div class="flex flex-column justify-content-between">
-                                <span class="font-bold text-base">100</span>
-                                <span class="text-xs gray line-through">50</span>
-                            </div>
-                            <div>
-                                <button pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-secondary p-button-text p-button-sm ml-auto"></button>                                
-                            </div>
-                        </div>
-                    </div>
-                </p-card>
-                <p-card class="mb-2 sumary_card">
-                    <div class="flex col-12 pt-0 pb-0 mb">
-                        <div class="">
-                            <div class="pl-2 pr-2 pt-0 pb-0">
-                                <img class="h-3rem w-3rem" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
-                            </div>
-                        </div>
-                        <div class="flex-grow-1">
-                            <div class="card-info-section">
-                                <div>
-                                    <span class="text-sm">Nombre /</span>
-                                    <span class="text-sm">descripción del producto</span>
-                                </div>
-                                <div class="mt-1">
-                                    <div class="text-left text-xs gray">Marca</div>
-                                </div>
-                            </div>
-                            <div class="card-add-item col-12 p-0">
-                                <div class="flex flex-row align-items-center">
-                                    <button pButton pRipple type="button" icon="pi pi-minus" class="p-button-rounded p-button-help p-button-text p-button-sm mr-2"></button>
-                                    <p class="w-3 p-input text-xs text-center btn_sum p-0" type="text" pInputText >
-                                        2 unid
-                                    </p>
-
-                                    <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded p-button-help p-button-text p-button-sm ml-2"></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="price-st flex flex-column justify-content-between">
-                            <div class="flex flex-column justify-content-between">
-                                <span class="font-bold text-base">100</span>
-                                <span class="text-xs gray line-through">50</span>
-                            </div>
-                            <div>
-                                <button pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-secondary p-button-text p-button-sm ml-auto"></button>                                
-                            </div>
-                        </div>
-                    </div>
-                </p-card>
-                <p-card class="mb-2 sumary_card">
-                    <div class="flex col-12 pt-0 pb-0">
-                        <div class="">
-                            <div class="pl-2 pr-2 pt-0 pb-0">
-                                <img class="h-3rem w-3rem" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
-                            </div>
-                        </div>
-                        <div class="flex-grow-1">
-                            <div class="card-info-section">
-                                <div>
-                                    <span class="text-sm">Nombre /</span>
-                                    <span class="text-sm">descripción del producto</span>
-                                </div>
-                                <div class="mt-1">
-                                    <div class="text-left text-xs gray">Marca</div>
-                                </div>
-                            </div>
-                            <div class="card-add-item col-12 p-0">
-                                <div class="flex flex-row align-items-center">
-                                    <button pButton pRipple type="button" icon="pi pi-minus" class="p-button-rounded p-button-help p-button-text p-button-sm mr-2"></button>
-                                    <p class="w-3 p-input text-xs text-center btn_sum p-0" type="text" pInputText >
-                                        2 unid
-                                    </p>
-
-                                    <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded p-button-help p-button-text p-button-sm ml-2"></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="price-st flex flex-column justify-content-between">
-                            <div class="flex flex-column justify-content-between">
-                                <span class="font-bold text-base">100</span>
-                                <span class="text-xs gray line-through">50</span>
-                            </div>
-                            <div>
-                                <button pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-secondary p-button-text p-button-sm ml-auto"></button>                                
-                            </div>
-                        </div>
-                    </div>
-                </p-card>
-                <p-card class="mb-2 sumary_card">
-                    <div class="flex col-12 pt-0 pb-0 mb">
-                        <div class="">
-                            <div class="pl-2 pr-2 pt-0 pb-0">
-                                <img class="h-3rem w-3rem" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
-                            </div>
-                        </div>
-                        <div class="flex-grow-1">
-                            <div class="card-info-section">
-                                <div>
-                                    <span class="text-sm">Nombre /</span>
-                                    <span class="text-sm">descripción del producto</span>
-                                </div>
-                                <div class="mt-1">
-                                    <div class="text-left text-xs gray">Marca</div>
-                                </div>
-                            </div>
-                            <div class="card-add-item col-12 p-0">
-                                <div class="flex flex-row align-items-center">
-                                    <button pButton pRipple type="button" icon="pi pi-minus" class="p-button-rounded p-button-help p-button-text p-button-sm mr-2"></button>
-                                    <p class="w-3 p-input text-xs text-center btn_sum p-0" type="text" pInputText >
-                                        2 unid
-                                    </p>
-
-                                    <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded p-button-help p-button-text p-button-sm ml-2"></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="price-st flex flex-column justify-content-between">
-                            <div class="flex flex-column justify-content-between">
-                                <span class="font-bold text-base">100</span>
-                                <span class="text-xs gray line-through">50</span>
-                            </div>
-                            <div>
-                                <button pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-secondary p-button-text p-button-sm ml-auto"></button>                                
-                            </div>
-                        </div>
-                    </div>
-                </p-card>
-            </div>
-        </div>
-
-
+  <div class="summary-bag-box mt-3 pl-4 pr-4">
+    <div class="py-3 px-3 summary-bag-box-title">
+      <span class="font-bold text-base">Bolsa de compras: </span>
+      <span class="text-base">{{countProducts}} productos seleccionados</span>
     </div>
+    <div class="summary-bag-item-wrap pb-2">
+      <div class="summary-bag-item" *ngFor="let pedidoDetalle of pedido.PedidoDetalle; let i = index">
+        <p-card class="mb-2 sumary_card">
+          <div class="flex col-12 pt-0 pb-0">
+            <div class="">
+              <div class="pl-2 pr-2 pt-0 pb-0">
+                <img class="h-3rem w-3rem" src="../../../../assets/perfil-tiendi-icono-invertido.png" alt="" />
+              </div>
+            </div>
+            <div class="flex-grow-1">
+              <div class="card-info-section">
+                <div>
+                  <span class="text-sm">{{ pedidoDetalle.Nombre }}/</span>
+                  <span class="text-sm">{{ pedidoDetalle.Descripcion }}</span>
+                </div>
+                <div class="mt-1">
+                  <div class="text-left text-xs gray">{{ pedidoDetalle.MarcaDes }}</div>
+                </div>
+              </div>
+              <div class="card-add-item col-12 p-0">
+                <div class="flex flex-row align-items-center">
+                  <button pButton pRipple type="button" icon="pi pi-minus"
+                    class="p-button-rounded p-button-help p-button-text p-button-sm mr-2"
+                    (click)="lessQuantity(pedidoDetalle)"></button>
+                  <p class="w-3 p-input text-xs text-center btn_sum p-0" type="text" pInputText>
+                    {{ pedidoDetalle.Cantidad }} unid
+                  </p>
+                  <button pButton pRipple type="button" icon="pi pi-plus"
+                    class="p-button-rounded p-button-help p-button-text p-button-sm ml-2"
+                    (click)="plusQuantity(pedidoDetalle)"></button>
+                </div>
+              </div>
+            </div>
+            <div class="price-st flex flex-column justify-content-between">
+              <div class="flex flex-column justify-content-between">
+                <span class="font-bold text-base">S/ {{ pedidoDetalle.Descuento }}</span>
+                <span class="text-xs gray line-through">S/ {{ pedidoDetalle.Precio }}</span>
+              </div>
+              <div>
+                <button pButton pRipple type="button" icon="pi pi-times"
+                  class="p-button-rounded p-button-secondary p-button-text p-button-sm ml-auto"
+                  (click)="deleteItem(pedidoDetalle)"></button>
+              </div>
+            </div>
+          </div>
+        </p-card>
+      </div>
+
+      <div class="text-base font-bold px-5 pt-3 pb-3 flex flex-row">
+        <div class="text-left w-6 text-base">Sub total</div>
+        <div class="text-right w-6 text-base">S/ {{ pedido && pedido.SubTotal }}</div>
+      </div>
+    </div>
+  </div>
 </div>
