--- a/src/app/layout/component/order-summary/order-summary.component.html
+++ b/src/app/layout/component/order-summary/order-summary.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="flex align-content-center top_pedido_box justify-content-between">
   	<span class="pedido_text text-xl font-bold">
-  		Pedido No: {{pedido.Numero}}
+  		Pedido N°: {{pedido.Numero}}
   	</span>
   	<button>
   		<span class="text-base">
