--- a/src/app/layout/component/recent-order-more/recent-order-more.component.html
+++ b/src/app/layout/component/recent-order-more/recent-order-more.component.html
@@ -1,6 +1,12 @@
 <div id="recent-order-wrap">
   <div class="px-3 bg-white top-card-order">
     <div class="flex flex-row w-full align-items-center">
+      <div class="flex flex-column w-1">
+        <button pButton pRipple type="button" icon="pi pi-times"
+          class="p-button-rounded p-button-secondary p-button-text" style="color: #0cc2a9"
+          (click)="closeSideOrder()"></button>
+      </div>
+
       <div class="font-bold text-xl">
         Mis pedidos
       </div>
@@ -42,7 +48,7 @@
               </div>
             </div>
             <div class="w-1">
-              <button pButton pRipple type="button" icon="pi pi-arrow-right" class="button_arrow" 
+              <button pButton pRipple type="button" icon="pi pi-arrow-right" class="button_arrow"
                 (click)="openSideOrderSummary(pedido.IDPedido)"></button>
             </div>
           </div>
