--- a/src/app/layout/component/cart-summary/cart-summary.component.html
+++ b/src/app/layout/component/cart-summary/cart-summary.component.html
@@ -18,68 +18,32 @@
             <div class="flex flex-row">
               <div class="text-left text-xs gray">{{ pedidoDetalle.MarcaDes }}</div>
               <div class="flex flex-column justify-content-end text-right w-full">
-                <div class="font-bold text-base">{{ pedidoDetalle.Descuento }}</div>
+                <div class="font-bold text-base">
+                  S/ {{ pedidoDetalle.Descuento }}</div>
                 <div class="text-xs gray line-through">
-                  {{ pedidoDetalle.Precio }}
+                  S/ {{ pedidoDetalle.Precio }}
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- <div class="flex flex-row">
-          <button pButton pRipple type="button" icon="pi pi-minus" class="p-button-rounded p-button-help p-button-text p-button-sm mr-2"
-          (click)="restOrDelete(i)"></button>
-          <p class="w-3 p-input text-xs text-center btn_sum p-0" type="text" pInputText>
-            {{ product.quantity }} unid
-          </p>
-
-          <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded p-button-help p-button-text p-button-sm ml-2"
-          (click)="product.quantity = product.quantity + 1"></button>
-          <button pButton pRipple type="button" icon="pi pi-times" class="
-              p-button-rounded p-button-secondary p-button-text p-button-sm
-              ml-auto
-            " (click)="deleteItem(i)"></button>
-        </div> -->
         <div class="flex flex-row">
-          <button pButton pRipple type="button" icon="pi pi-minus" class="
-                    p-button-rounded p-button-help p-button-text p-button-sm mr-2" (click)="restOrDelete(i)"></button>
+          <button pButton pRipple type="button" icon="pi pi-minus" class="p-button-rounded p-button-help p-button-text p-button-sm mr-2"
+            (click)="lessQuantity(pedidoDetalle)"></button>
           <p class="w-3 p-input text-xs text-center btn_sum p-0" type="text" pInputText>
             {{ pedidoDetalle.Cantidad }} unid
           </p>
-
           <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded p-button-help p-button-text p-button-sm ml-2"
-            (click)="pedidoDetalle.Cantidad = pedidoDetalle.Cantidad + 1"></button>
+            (click)="plusQuantity(pedidoDetalle)"></button>
+
           <button pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-secondary p-button-text p-button-sm ml-auto"
-            (click)="deleteItem(i)"></button>
+            (click)="deleteItem(pedidoDetalle)"></button>
         </div>
       </div>
     </p-card>
   </div>
 
-
-
-
-
-  <div class="text-base font-bold px-5 pt-3 flex flex-row">
+  <div class="text-base font-bold px-5 pt-3 pb-3 flex flex-row">
     <div class="text-left w-6 text-base">Sub total</div>
-    <div class="text-right w-6 text-base">{{ pedido && pedido.SubTotal }}</div>
+    <div class="text-right w-6 text-base">S/ {{ pedido && pedido.SubTotal }}</div>
   </div>
-  <div class="flex justify-content-center pb-3">
-    <!-- <button
-      pButton
-      pRipple
-      type="button"
-      class="p-button-text p-button-rounded p-button-secondary font-bold"
-      style="color: #9C27B0;"
-      (click) = "openBag()"
-    >
-      Ir a bolsa de compras
-    </button> -->
-  </div>
-
-
-  <!-- <p-overlayPanel id = "panel" #op [style]="{ width: '300px', padding: 'unset' }">
-  <ng-template pTemplate style="width: 0px">
-    <app-cart-summary></app-cart-summary>
-  </ng-template>
-</p-overlayPanel> -->
