--- a/src/app/layout/component/recent-order-detail/recent-order-detail.component.html
+++ b/src/app/layout/component/recent-order-detail/recent-order-detail.component.html
@@ -12,9 +12,9 @@
                   <div class="text-xs gray">{{pedidoDetalle.Cantidad}} {{pedidoDetalle.UnidadMedidaDes}}</div>
               </div>
               <div class="flex flex-column w-3">
-                  <div class="font-bold text-right">{{ pedidoDetalle.Precio }}</div>
+                  <div class="font-bold text-right">S/ {{ pedidoDetalle.Precio }}</div>
                   <div class="text-sm line-through gray text-right">
-                      {{ pedidoDetalle.Precio + pedidoDetalle.Descuento }}
+                    S/ {{ pedidoDetalle.Precio + pedidoDetalle.Descuento }}
                   </div>
               </div>
           </div>
@@ -23,21 +23,21 @@
           <div class="Subtotal_box flex flex-column justify-content-end">
               <div class="pb-3 mb-3 text-lg font-bold flex flex-row boder_bt">
                   <div class="text-lg font-bold text-right w-9">Subtotal </div>
-                  <div class="text-right w-3 pr-3">{{pedido.SubTotal}}</div>
+                  <div class="text-right w-3 pr-3">S/ {{pedido.SubTotal}}</div>
               </div>
               <div class="pb-3 mb-3 text-lg font-bold gray flex flex-row boder_bt">
                   <div class="text-lg font-bold text-right w-9">IGV </div>
-                  <div class="text-right w-3 pr-3">{{pedido.IGV}}</div>
+                  <div class="text-right w-3 pr-3">S/ {{pedido.IGV}}</div>
               </div>
               <div class="pb-3 mb-3 text-lg font-bold gray flex flex-row boder_bt">
                 <div class="text-lg font-bold text-right w-9">Despacho</div>
-                <div class="text-right w-3 pr-3">{{pedido.DespachoMonto}}</div>
+                <div class="text-right w-3 pr-3">S/ {{pedido.DespachoMonto}}</div>
             </div>
               <div class="text-lg font-bold purple flex flex-row">
                   <div class="text-lg font-bold text-right w-9">
                       Total
                   </div>
-                  <div class="text-right w-3 pr-3">{{pedido.Total}}</div>
+                  <div class="text-right w-3 pr-3">S/ {{pedido.Total}}</div>
               </div>
           </div>
       </div>
